fix: erros de contraste dos temas e dos ícones

--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,7 @@
     --background: 39 85% 95%;
     --foreground: 41 3% 15%;
     --primary: 40 0% 15%;
-    --primary-foreground: 39 15% 90%;
+    --primary-foreground: 39 85% 90%;
     --secondary: 60 3% 20%;
     --secondary-foreground: 39 30% 90%;
     --card: 41 3% 15%;
